--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,25 @@
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
+# Игнорировать временные файлы сборки
+bin/
+obj/
+
+# Игнорировать файлы настроек Visual Studio
 .vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
-*.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
+*.user
+*.suo
+*.sln.docstates
+*.vs
+
+# Игнорировать временные файлы системы
+*.tmp
+*.log
+*.bak
+
+# Игнорировать пакеты NuGet
+*.nupkg
+packages/
+
+# Игнорировать папку с данными приложения
+App_Data/
+
+# Игнорировать файлы конфигурации
+*.config
